<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess It! Language Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_register">New user</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullName">Full Name</string>
    <string name="newAccount">Register new account</string>
    <string name="existingAccount">Already has account! Login here</string>
    <string name="title_activity_register">Register New Account</string>
    <string name="loginYourAccount">Login to your Account</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="play">Play</string>
    <string name="stats">Statistics</string>
    <string name="dictionary">Notebook</string>
    <string name="newdef">New Definition</string>
    <string name="about">Credits</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_play_menu">Play Menu</string>
    <string name="title_activity_new_definition">New Definition</string>
    <string name="title_activity_dictionary">Notebook</string>

    <!-- New Definition Activity -->
    <string name="writeNewArticle"> Article... </string>
    <string name="writeNewDef"> New Word... </string>
    <string name="definitionBody"> Body Definition... </string>
    <string name="category"> Category: </string>
    <string name="hintBody"> Hint...</string>
    <string name="errorNewDef"> Error at sending the new definition</string>
    <string name="exists"> already exists</string>
    <string name="emptyDefinition"> Definition field must be filled out</string>
    <string name="emptyHint"> Hint field must be filled out</string>
    <string name="emptyWord"> Word field must be filled out</string>
    <string name="invalidCategory"> Category is not valid </string>
    <string name="wordEqDef"> Word cannot be equal to Definition</string>
    <string name="nowordsleft"> No words to define, play to unlock it</string>

    <!-- Review Question -->
    <string name="added"> added</string>
    <string name="oneword"> You have selected more than one word </string>
    <string name="noText"> No text selected</string>
    <string name="errorReason"> Couldn\'t send report reason </string>

    <!-- Result Activity -->
    <string name="pistas"> used clues</string>
    <string name="backToMenu"> Back to Menu </string>
    <string name="back"> Back </string>

    <!-- Game Activity -->
    <string name="wordHint"> Enter answer here </string>
    <string name="errorQuestions"> Error in questions petition</string>
    <string name="noQuestions"> No questions to show</string>
    <string name="pista"> Clue</string>
    <string name="articleword"> Article: </string>
    <string name="wrongAnswer1"> Wrong answer, Try again! </string>
    <string name="wrongAnswer2"> Wrong answer </string>
    <string name="loadingDefinition"> Loading definition&#8230;</string>
    <string name="OkStadistics"> Results sent</string>
    <string name="noReason"> You must introduce a reason to report</string>
    <string name="remember"> Remember!</string>
    <string name="report"> Report</string>
    <string name="reportReason"> Reason to report:</string>
    <string name="sureExit"> ¿Are you sure that you want to EXIT? </string>
    <string name="punish"> You will be penalized if it becomes usual</string>

    <!-- Play Menu Activity -->
    <string name="PlayerVsComputer"> Single Player Mode</string>
    <string name="PlayerVsPlayer"> Multiplayer Mode</string>
    <string name="joingGroupQueue"> Join group queue</string>
    <string name="levelTxt"> Level: </string>
    <string name="numQuestions"> Questions: </string>
    <string name="startGame"> Start </string>
    <string name="selectAll"> All </string>
    <string name="none"> None </string>
    <string name="allLevels">All</string>
    <string name="gameSettings"> Game Settings</string>
    <string name="atLeastOneCategory"> You must select at least one category </string>
    <string name="atLeastOneQuestion"> You must select at least one question </string>

    <!-- Register Activity -->
    <string name="invalidName"> Invalid Name</string>
    <string name="invalidEmail"> Invalid Email</string>
    <string name="invalidPass"> Invalid Password</string>
    <string name="sending"> Sending...</string>
    <string name="userReg"> You are now registered!</string>
    <string name="userNotReg"> User already exists </string>

    <!-- Login Activity -->
    <string name="logging"> Logging...</string>
    <string name="userNotExists"> Incorrect email or password!</string>
    <string name="emailNotExists"> Email is not registered </string>
    <string name="rememberMe"> Remember Me</string>
    <string name="recover"> Forgot my password</string>
    <string name="newPassword"> A new password has been sent to your email</string>
    <string name="sureReset"> Are you sure that you want to RESET your password?</string>
    
    <!-- About -->
    <string name="implemented"> Developed by </string>
    <string name="designed"> Designed by </string>
    <string name="languages"> Languages </string>
    <string name="english"> English </string>
    <string name="german"> German </string>
    <string name="russian"> Russian </string>
    <string name="newCollaborator"> Do you want your name to appear here? Contact us at</string>
    <string name="guessItEmail"> guessit.languagetrainer@gmail.com </string>
    
    <!-- Reports -->
    <string name="improperContent"> Wrong content </string>
    <string name="offensiveContent"> Offensive content </string>
    <string name="orthographicError"> Ortographic error </string>
    <string name="sintaxError"> Sintax error </string>
    <string name="grammarError"> Wrong grammar, syntax or spelling</string>
    <string name="difficultDefinition"> Difficult to guess</string>
    <string name="badAudio"> Audio quality is not good</string>

    <!-- Statistics -->
    <string name="nolastgame"> Play a game first</string>
    <string name="lastGame"> Last Game</string>
    <string name="playStatistics"> Game Statistics</string>
    <string name="defStatistics"> Definitions Statistics</string>
    <string name="avgRating"> Average Rating</string>
    <string name="avgSuccRatio"> Average success ratio</string>
    <string name="numReports"> Nº of reports </string>
    <string name="ratiosucc"> Success ratio</string>
    <string name="wordsPlayed"> Words played</string>
    <string name="bestCat"> Best category</string>
    <string name="WorstCat"> Worst category</string>
    <string name="mostplayedlevel"> Most played level</string>
    <string name="playedlevels"> Played levels</string>

    <!-- General -->
    <string name="Send"> Send </string>
    <string name="guess"> Guess </string>
    <string name="rate"> Rate </string>
    <string name="updating"> Updating </string>
    <string name="loading"> Loading</string>
    <string name="ok"> Ok </string>
    <string name="Yes"> Yes</string>
    <string name="No"> No</string>
    <string name="cancel"> Cancel </string>
    <string name="sure"> Are you sure that you want to SEND this new definition?</string>
    <string name="error"> Error </string>
    <string name="noNetwork"> Unable to connect to Internet </string>
    <string name="serverIssues"> Unable to connect to server</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_review_question">ReviewQuestionActivity</string>
    <string name="rateDef"> ¡Rate this definition! </string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>