<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="3" >

    <Button
        android:id="@+id/PlayerVsComputerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/red_button"
        android:text="@string/PlayerVsComputer"
        android:textColor="#000000" >
    </Button>

    <Button
        android:id="@+id/PlayerVsPlayerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/red_button"
        android:text="@string/PlayerVsPlayer"
        android:textColor="#000000" >
    </Button>

    <Button
        android:id="@+id/GroupQueueBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/red_button"
        android:text="@string/joingGroupQueue"
        android:textColor="#000000" >
    </Button>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/selectAll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxWidth="80dp"
                    android:singleLine="false"
                    android:text="@string/numQuestions" />

                <Button
                    android:id="@+id/selectAllBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/select_all"
                    android:text="@string/selectAll"
                    android:textColor="#000000" />
            </RelativeLayout>

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/start_game"
                android:text="@string/startGame"
                android:textColor="#ffffff" >
            </Button>
        </LinearLayout>

        <GridView
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnWidth="60dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:isScrollContainer="false"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />
    </LinearLayout>

</LinearLayout>