<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".MainMenuActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Main Menu -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Play Button -->

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@layout/rounded_button"
                android:text="@string/play" />
            <!-- Stats Button -->

            <Button
                android:id="@+id/btnStats"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@layout/rounded_button"
                android:text="@string/stats" />
            <!-- Dicctionary Button -->

            <Button
                android:id="@+id/btnDictionary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@layout/rounded_button"
                android:text="@string/dictionary" />

            <!-- New definition Button -->

            <Button
                android:id="@+id/btnNewDef"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@layout/rounded_button"
                android:text="@string/newdef" />
        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>

</ScrollView>