<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Divide horizontal -->

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10" >

        <!-- Palabra y definición -->

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/wordHint"
                android:paddingRight="20dp"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:textIsSelectable="true"
                android:textStyle="italic"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/loadingDefinition"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0" />
        </LinearLayout>

        <!-- Contiene botones -->

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <es.uca.tabu.MarkableButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/select_all"
                android:text="@string/Send"
                android:textColor="#000000" />

            <es.uca.tabu.MarkableButton
                android:id="@+id/pista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/clue" />

            <es.uca.tabu.MarkableButton
                android:id="@+id/dictionary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dictionary" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>